r2e-compile-tests/compile-fail/anonymous_without_identity.stderr
error[E0080]: evaluation panicked: #[anonymous] needs a required struct-level #[inject(identity)] field to opt out of: with no identity the routes are already public, and an Option<..> identity never rejects — the marker would be a no-op
  --> compile-fail/anonymous_without_identity.rs:14:14
   |
14 |     async fn show(&self) -> Json<String> {
   |              ^^^^ evaluation of `_` failed here
